# fastapi-google-auth-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  railway.json
.github/: pre-commit-config-ci.yaml
.github/workflows/: main.yml
alembic/: env.py  init_migration_db.sql
alembic/versions/: 001_users.py
src/: main.py
src/auth/: google_oauth.py  router.py  schemas.py
src/core/: config.py  db.py  deps.py  security.py
src/users/: models.py  repo.py  router.py  schemas.py
tests/: conftest.py  helpers.py  test_auth_router.py  test_users_router.py
